# fantano

./: .env.example  .gitignore  RAILWAY.md  README.md  pyproject.toml  tracks.csv
apps/web/: Dockerfile  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/api/playlist/export/: route.ts
apps/web/src/app/api/search/: route.ts
apps/web/src/app/api/spotify/callback/: route.ts
apps/web/src/app/api/spotify/login/: route.ts
apps/web/src/app/api/spotify/status/: route.ts
apps/web/src/app/api/stats/: route.ts
apps/web/src/app/artist/[slug]/: page.tsx
apps/web/src/app/artists/: page.tsx
apps/web/src/app/genre/[slug]/: page.tsx
apps/web/src/app/random/: page.tsx
apps/web/src/app/year/[year]/: page.tsx
apps/web/src/components/: browse-grid.tsx  command-palette.tsx  count-up.tsx  providers.tsx  scroll-nav.tsx  search-form.tsx  track-card.tsx
apps/web/src/lib/: db.ts  filter.ts  spotify-auth.ts  types.ts
db/: schema.sql
src/fantano/: __init__.py  cli.py  enrich.py  export.py  fetch.py  parse.py  paths.py  spotify.py  sync.py
worker/: Dockerfile
