[project]
name = "fantano"
version = "0.1.0"
description = "Build a Spotify playlist of every track Anthony Fantano has ever called a FAV TRACK."
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.15",
    "spotipy>=2.24.0",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.10.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
fantano = "fantano.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fantano"]
